<resources>
    <string name="app_name">SoftSquared Android Kotlin Template</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Common -->
    <string name="home_fragment">home</string>
    <string name="search1_fragment">search1</string>
    <string name="search2_fragment">search2</string>
    <string name="profile_fragment">profile</string>
    <string name="setting_fragment">setting</string>
    <string name="post_fragment">post</string>
    <string name="list_fragment">list</string>
    <string name="user_fragment">user</string>
    <string name="login_fragment">login</string>
    <string name="gallery_fragment">gallery</string>
    <string name="upload_fragment">upload</string>
    <string name="join_p_n_fragment">joinPN</string>
    <string name="join_email_fragment">joinEmail</string>
    <string name="join_email_auth_fragment">joinEmailAuth</string>
    <string name="join_p_n_auth_fragment">joinPNAuth</string>
    <string name="join_name_fragment">joinName</string>
    <string name="join_password_fragment">joinPassword</string>
    <string name="join_birth_day_fragment">joinBirthDay</string>
    <string name="join_nick_name_fragment">joinNickName</string>
    <string name="join_photo_fragment">joinPhoto</string>
    <string name="join_welcome_fragment">joinWelcome</string>

    <!-- Main -->
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_search_title">탐색</string>
    <string name="main_btm_nav_plus_title">추가</string>
    <string name="main_btm_nav_reels_title">릴스</string>
    <string name="main_btm_nav_profile_title">프로필</string>

    <!-- Home -->

    <!-- Login -->
    <string name="login_language_ko">한국어</string>
    <string name="login_et_id">사용자 이름, 이메일 주소 또는 휴대폰 번호</string>
    <string name="login_et_pw">비밀번호</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_pw_text">비밀번호를 잊으셨나요?</string>
    <string name="login_btn_join">새 계정 만들기</string>
    <string name="login_error_title">잘못된 비밀번호</string>
    <string name="login_error_message1">입력된 비밀번호가 올바르지 않습니다. 다시</string>
    <string name="login_error_message2">시도하세요.</string>
    <string name="login_error_btn_check">확인</string>

    <!-- Join -->
    <string name="join_btn_next">다음</string>
    <string name="join_btm_text">이미 계정이 있으신가요?</string>
    <!-- JoinPN -->
    <string name="joinPN_title">휴대폰 번호 입력</string>
    <string name="joinPN_sub_title">회원님에게 연락할 수 있는 휴대폰 번호를 입력하세요. 이 휴대폰 번호는 프로필에서 다른 사람에게 공개되지 않습니다.</string>
    <string name="joinPN_et">휴대폰 번호</string>
    <string name="joinPN_et_text">보안 및 로그인 목적으로 Instagram에서 보내는 SMS 알림을 수신할 수 있습니다.</string>
    <string name="joinPN_btn_email">이메일 주소로 가입하기</string>
    <string name="joinPN_error_empty">휴대폰 번호는 필수항목입니다.</string>
    <!-- JoinEmail -->
    <string name="joinEmail_title">이메일 주소 입력</string>
    <string name="joinEmail_sub_title">회원님에게 연락할 수 있는 이메일 주소를 입력하세요. 이 이메일 주소는 프로필에서 다른 사람에게 공개되지 않습니다.</string>
    <string name="joinEmail_et">이메일 주소</string>
    <string name="joinEmail_btn_pn">휴대폰 번호로 가입</string>
    <!-- JoinAuth -->
    <string name="joinAuth_title">인증 코드 입력</string>
    <string name="joinEmailAuth_sub_title">계정을 확인하려면 %s 주소로 전송된 6자리 코드를 입력하세요.</string>
    <string name="joinPNAuth_sub_title">계정을 확인하려면 %s번으로 전송된 6자리 코드를 입력하세요.</string>
    <string name="joinAuth_et">인증 코드</string>
    <string name="joinAuth_btn">코드를 받지 못했습니다</string>
    <!-- JoinName -->
    <string name="joinName_title">이름 입력</string>
    <string name="joinName_et">성명</string>
    <!-- JoinPassword -->
    <string name="joinPassword_title">6자 이상의 문자 또는 숫자로 비밀번호를 만드세요</string>
    <string name="joinPassword_sub_title">회원님의 이름, 휴대폰 번호 또는 이메일 주소는 사용할 수 없습니다.</string>
    <!-- JoinBirthday -->
    <string name="joinBirthDay_title">생년월일 입력</string>
    <string name="joinBirthDay_sub_title">비즈니스, 반려동물 또는 기타 목적으로 이 계정을 만드는 경우에도 회원님의 실제 생년월일을 사용하세요. 이 생년월일 정보는 프로필에서 다른 사람에게 공개되지 않습니다. 왜 생년월일을 입력해야 하나요?</string>
    <string name="joinBirthDay_et">%d년 %d월 %d일</string>
    <string name="joinBirthDay_dialog_title">날짜 설정</string>
    <string name="joinBirthDay_btn_no">취소</string>
    <string name="joinBirthDay_btn_yes">설정</string>
    <!-- JoinNickName -->
    <string name="joinNickName_title">사용자 이름 만들기</string>
    <string name="joinNickName_sub_title">사용자 이름을 추가하거나 추천 이름을 사용하세요. 언제든지 변경할 수 있습니다.</string>
    <string name="joinNickName_et">사용자 이름</string>
    <!-- JoinPhoto -->
    <string name="joinPhoto_title">프로필 사진 추가</string>
    <string name="joinPhoto_sub_title">친구들이 회원님을 알아볼 수 있도록 프로필 사진을 추가하세요. 프로필 사진은 모든 사람에게 공개됩니다.</string>
    <string name="joinPhoto_btn_add">사진 추가</string>
    <string name="joinPhoto_btn_skip">건너뛰기</string>
    <string name="joinWelcome_text1">%s님, Instagram에 오신 것을 환영합니다</string>
    <string name="joinWelcome_text2">이제 몇 가지 단계를 통해 이용 환경을 원하는 대로 설정해보세요</string>

    <!-- Profile -->
    <string name="profile_post_text">게시물</string>
    <string name="profile_follower_text">팔로워</string>
    <string name="profile_following_text">팔로잉</string>
    <string name="profile_btn1">프로필 편집</string>
    <string name="profile_btn2">프로필 공유</string>
    <string name="profile_story_title">스토리 하이라이트</string>
    <string name="profile_story_sub_title">좋아하는 스토리를 프로필에 보관해보세요</string>
    <string name="profile_story_new">신규</string>
    <string name="profile_page1_text1">프로필</string>
    <string name="profile_page1_text2">사진과 동영상을 공유하면 프로필에 표시됩니다.</string>
    <string name="profile_page1_text3">첫 사진/동영상을 공유해보세요</string>
    <string name="profile_page2_text1">회원님이 나온 사진 및 동영상</string>
    <string name="profile_page2_text2">사람들이 회원님을 사진 및 동영상에 태그하면</string>
    <string name="profile_page2_text3">태그된 사진 및 동영상이 여기에 표시됩니다.</string>
    <string name="user_btn_message">메시지</string>
    <string name="user_page_zero">게시물 없음</string>
    
    <!-- Profile Dialog -->
    <string name="dialog_text1">설정</string>
    <string name="dialog_text2">내 활동</string>
    <string name="dialog_text3">보관</string>
    <string name="dialog_text4">QR 코드</string>
    <string name="dialog_text5">저장됨</string>
    <string name="dialog_text6">디지털 자산</string>
    <string name="dialog_text7">친한 친구</string>
    <string name="dialog_text8">즐겨찾기</string>

    <!-- Comment -->
    <string name="comment_toolbar_title">댓글</string>
    <string name="comment_text">답글 달기</string>
    <string name="comment_input">댓글 추가...</string>
    <string name="comment_input_btn">게시</string>

    <!-- List -->
    <string name="list_tab_follower">팔로워 %d명</string>
    <string name="list_tab_following">팔로잉 %d명</string>
    <string name="follower_btn_delete">삭제</string>
    <string name="list_search_hint">검색</string>

    <!-- gallery -->
    <string name="gallery_toolbar_title">새 게시물</string>
    <string name="gallery">갤러리</string>
    <!-- upload -->
    <string name="upload_et">문구 입력...</string>
    <string name="upload_tag_user">사람 태그하기</string>
    <string name="upload_tag_location">위치 추가</string>
    <string name="upload_tag_music">음악 추가</string>

    <!-- setting -->
    <string name="setting_toolbar_title">설정</string>
    <string name="setting_text1">친구 팔로우 및 초대</string>
    <string name="setting_text2">알림</string>
    <string name="setting_text3">개인정보 보호</string>
    <string name="setting_text4">관리 감독</string>
    <string name="setting_text5">보안</string>
    <string name="setting_text6">광고</string>
    <string name="setting_text7">계정</string>
    <string name="setting_text8">도움말</string>
    <string name="setting_text9">소개</string>
    <string name="setting_text10">테마</string>
    <string name="setting_center">계정 센터</string>
    <string name="setting_center_sub">스토리 및 게시글 공유, 로그인 등 Instagram, Facebook 앱, Messenger 간에 연결된 환경에 대한 설정을 관리하세요.</string>
    <string name="setting_login">로그인</string>
    <string name="setting_add">계정 추가</string>
    <string name="setting_logout">로그아웃</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>