<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/main_btm_nav_home"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home_title" />

    <item
        android:id="@+id/menu_main_btm_nav_search"
        android:icon="@drawable/main_btm_nav_search"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_search_title" />

    <item
        android:id="@+id/menu_main_btm_nav_plus"
        android:icon="@drawable/ic_plus"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_plus_title" />

    <item
        android:id="@+id/menu_main_btm_nav_reels"
        android:icon="@drawable/ic_reels"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_reels_title" />

    <item
        android:id="@+id/menu_main_btm_nav_profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_profile_title" />

</menu>
